--- a/app/src/main/res/layout/activity_counter.xml
+++ b/app/src/main/res/layout/activity_counter.xml
@@ -255,7 +255,7 @@
             android:layout_height="match_parent"
             android:layout_margin="12dp"
             android:contentDescription="@string/play_pause"
-            android:src="@drawable/play"
+            android:src="@drawable/pause"
             app:tint="@color/grey" />
 
     </androidx.cardview.widget.CardView>
