--- a/app/src/main/res/layout/bottom_sheet_google_signin.xml
+++ b/app/src/main/res/layout/bottom_sheet_google_signin.xml
@@ -1,53 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_sheet_curve_card"
-    android:orientation="vertical"
-    android:padding="24dp">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/continueWithGoogleButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="4dp"
         app:cardBackgroundColor="@color/dark_grey"
         app:cardCornerRadius="32dp"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        android:layout_marginVertical="8dp"
+        android:alpha="0.5"
+        android:layout_gravity="center_horizontal"/>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/bottom_sheet_curve_card"
+        android:padding="24dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/continueWithGoogleButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            app:cardBackgroundColor="@color/dark_grey"
+            app:cardCornerRadius="32dp"
+            app:cardElevation="0dp">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                app:cardBackgroundColor="@color/very_light_grey"
-                app:cardCornerRadius="32dp"
-                app:cardElevation="0dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:contentDescription="@string/next"
-                    android:src="@drawable/google" />
-
-            </androidx.cardview.widget.CardView>
-
-            <TextView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/special_gothic_semiexpanded_bold"
-                android:gravity="center"
-                android:text="@string/continue_with_google"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="8dp">
 
-        </LinearLayout>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    app:cardBackgroundColor="@color/very_light_grey"
+                    app:cardCornerRadius="32dp"
+                    app:cardElevation="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="8dp"
+                        android:contentDescription="@string/next"
+                        android:src="@drawable/google" />
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/special_gothic_semiexpanded_bold"
+                    android:gravity="center"
+                    android:text="@string/continue_with_google"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
