--- a/app/src/main/res/layout/fragment_vertical_stats.xml
+++ b/app/src/main/res/layout/fragment_vertical_stats.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Push Ups"
+        android:text="@string/push_ups"
         android:textSize="12sp"
         android:textColor="@color/black"
         android:fontFamily="@font/special_gothic_expanded_bold"/>
@@ -20,7 +20,7 @@
         android:id="@+id/pushUpCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/total_push_ups_today_count"
+        android:text="@string/_0"
         android:layout_marginTop="-8dp"
         android:textSize="64sp"
         android:textColor="@color/black"
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Time"
+        android:text="@string/time"
         android:textSize="12sp"
         android:textColor="@color/black"
         android:fontFamily="@font/special_gothic_expanded_bold"/>
@@ -38,7 +38,7 @@
         android:id="@+id/totalTimeCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="23m 46s"
+        android:text="@string/_0m_0s"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:fontFamily="@font/special_gothic_expanded_bold"/>
@@ -46,7 +46,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rest"
+        android:text="@string/rest"
         android:textSize="12sp"
         android:layout_marginTop="8dp"
         android:textColor="@color/black"
@@ -56,7 +56,7 @@
         android:id="@+id/restTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5m 3s"
+        android:text="@string/_0m_0s"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:fontFamily="@font/special_gothic_expanded_bold"/>
@@ -65,7 +65,8 @@
         android:id="@+id/ivImage"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:src="@drawable/pushup_character"
+        android:importantForAccessibility="no"
+        android:src="@drawable/push_up_character"
         app:tint="@color/primary" />
 
 </LinearLayout>
